--- a/pug/home/section_maps.pug
+++ b/pug/home/section_maps.pug
@@ -1,1 +1,1 @@
-section#maps-indonesia.container-fluid(style="width: 100%; height:800px")
+section#maps-indonesia.container-fluid(style="width: 100%; height:100vh")
