--- a/index.pug
+++ b/index.pug
@@ -13,6 +13,9 @@ html(lang="id" page-class="home")
         include pug/includes/analytics_no_script.pug
         include pug/includes/navigation.pug
         main
-           include pug/home/section_maps.pug
+            //- include pug/home/section_maps.pug
+            include pug/home/section_persebaran_penerima.pug
+
+
         include pug/includes/footer.pug
     include pug/includes/html_foot.pug
