--- a/index.pug
+++ b/index.pug
@@ -15,6 +15,9 @@ html(lang="id" page-class="home")
         main
             include pug/home/section_maps.pug
             include pug/home/section_persebaran_penerima.pug
+            include pug/home/section_profil_penerima.pug
+            include pug/home/section_manfaat_prakerja.pug
+            include pug/home/section_pipeline_data.pug
 
 
         include pug/includes/footer.pug
