--- a/pug/home/section_maps.pug
+++ b/pug/home/section_maps.pug
@@ -1,1 +1,5 @@
-section#maps-indonesia.container-fluid(style="width: 100%; height:100vh")
+section.section-hero
+    h1.main-heading.h3 
+        | Statistik Program 
+        span Prakerja
+    #maps-indonesia.container-fluid
