--- a/index.pug
+++ b/index.pug
@@ -7,7 +7,7 @@
 - contentDescription.description = "Informasi statistik penerima prakerja selama periode 2020 - 2024."
 
 doctype html
-html(lang="id" page-class="home")
+html(lang="id" translate="no" page-class="home")
     include pug/includes/html_head.pug
     body
         include pug/includes/analytics_no_script.pug
