--- a/index.pug
+++ b/index.pug
@@ -18,6 +18,9 @@ html(lang="id" page-class="home")
             include pug/home/section_profil_penerima.pug
             include pug/home/section_manfaat_prakerja.pug
             include pug/home/section_pipeline_data.pug
+            include pug/home/section_moda_pelatihan.pug
+            include pug/home/section_rekening_insentif.pug
+            include pug/home/section_pipeline_insentif.pug
 
 
         include pug/includes/footer.pug
