--- a/pug/home/section_pipeline_data.pug
+++ b/pug/home/section_pipeline_data.pug
@@ -1,9 +1,5 @@
 section.section-course.py-3.py-lg-5
     .container.px-4.px-md-0
-        .row.text-center
-            h4 Persebaran Penerima
-            p Data berasal dari seluruh Indonesia tahun 2020-2024 dengan skema Semi Bansos dan Skema Normal (Gelombang 1-69).
-        
         //- Pipeline 1 
         .row
             .col-6.p-3.bg-o600.rounded-bottom-left.pipeline
@@ -15,7 +11,7 @@ section.section-course.py-3.py-lg-5
                         p Sebanyak 85,9% responden berencana menggunakan sertifikat Prakerja apabila akan melamar pekerjaan di masa depan.
                         a.text-white(href="#") Sumber
 
-            .col-6.p-3.bg-pipeline.pipeline.rounded-top-right(style="background-image: url('img/img-bg-lp.webp');")
+            .col-6.p-3.bg-pipeline.pipeline.rounded-top-right(style="background-image: url('img/img-bg-lp-1.webp');")
                 .d-flex.align-items-center.justify-content-center.h-100
                     div.text-center
                         h6.text-white Jumlah Lembaga Pelatihan
@@ -26,17 +22,17 @@ section.section-course.py-3.py-lg-5
             .col-6.p-3.bg-pipeline.pipeline.rounded-top-left(style="background-image: url('img/img-bg-pelatihan.webp');")
                 .d-flex.align-items-center.justify-content-center.h-100
                     div.text-center
-                        h6.text-white Jumlah Lembaga Pelatihan
-                        h4.text-white.display-5 328
+                        h6.text-white Jumlah Pelatihan
+                        h4.text-white.display-5 109,165
 
-            .col-6.text-center.py-5.bg-b800.pipeline.text-white.rounded-bottom-right
-                h3.h2 38
-                p.m-0 dari 38 Provinsi erencana menggunakan sertifikat Prakerja apabila akan melamar pekerjaan di masa depan.
+            .col-6.text-center.py-5.bg-b800.pipeline.text-white.rounded-bottom-right.p-4
+                h6.text-white Total Pendaftaran Pelatihan
+                h3.display-5.text-white 29,165,063
+                p.m-0 Dengan rata-rata 1 penerima Prakerja mendaftarkan diri ke 1-2 pelatihan.
 
         //- Pipeline 3
-
-        .row.pipe-line-6.justify-content-center.py-lg-5.py-4
-            .col-8
+        .row.pipe-line-6.justify-content-center.py-lg-5.py-4.bg-s100.rounded-bottom-left.rounded-top-right
+            .col-10
                 .text-center 
                     h4.mb-4 5 Topik Pelatihan Paling Diminati di Prakerja
                 .d-flex.justify-content-between.w-100
@@ -69,74 +65,55 @@ section.section-course.py-3.py-lg-5
                             img(src="img/icon-5.svg", width="64", alt="")
                         h6 5%
                         p.text-secondary.fs-7 Teknik
-       
 
-//- section.py-5
-//-     .container-fluid.container-lg.position-relative
-//-             .container
-//-                 .row.pipe-line-4
-//-                     .col-6.p-3
-//-                         .d-flex.align-items-center.justify-content-center.h-100
-//-                             div
-//-                                 p
-//-                                     | Berdasarkan studi DEFINIT, program Prakerja meningkatkan daya saing penerima dalam meningkatkan peluang mendapatkan pekerjaan (94,7%), 
-//-                                     | meningkatkan keterampilan, kompetensi, dan produktivitas (82,8%), dan meningkatkan motivasi belajar teknologi digital (99,0%).
-//-                                 p Sebanyak 85,9% responden berencana menggunakan sertifikat Prakerja apabila akan melamar pekerjaan di masa depan.
-//-                                 a(href="#") Sumber
+        //- Pipeline 4
+        .row.pipe-line-6.justify-content-center.py-lg-5.py-4.bg-b800.rounded-bottom-right.rounded-top-left.text-white
+            .col-10
+                p Sejalan dengan survey CIPG yang menyatakan bahwa 7 pilihan pelatihan yang paling diminati adalah :
+                .row
+                    .col-3.mb-3
+                        .stick-list.d-flex
+                            .stick-number 1
+                            div.px-2
+                                span Makanan dan minuman
+                        
+                    .col-3.mb-3
+                        .stick-list.d-flex
+                            .stick-number 2
+                            div.px-2
+                                span Penjualan dan pemasaran
+                        
+                    .col-3.mb-3
+                        .stick-list.d-flex
+                            .stick-number 3
+                            div.px-2
+                                span Keuangan
+        
 
-//-                     .col-6.p-3
-//-                         .d-flex.align-items-center.justify-content-center.h-100
-//-                             div.text-center
-//-                                 h6 Jumlah Lembaga Pelatihan
-//-                                 span.display-5 328
+                    .col-3.mb-3
+                        .stick-list.d-flex
+                            .stick-number 4
+                            div.px-2
+                                span Gaya hidup
 
-//-     .container-fluid.container-lg.position-relative
-//-             .container
-//-                 .row.pipe-line-5.py-5
-//-                     .row
-//-                         .col-6.text-center
-//-                             h6 Jumlah Pelatihan
-//-                             h5.h2 109,165
-//-                             p.m-0.fs-7 dari 38 Provinsi
+                    .col-3.mb-3
+                        .stick-list.d-flex
+                            .stick-number 5
+                            div.px-2
+                                span TI
 
-//-                         .col-6.text-center
-//-                             h6 Total Pendaftaran Pelatihan
-//-                             h5.h2 29,165,063
-//-                             p.m-0.fs-7 Dengan rata-rata 1 penerima Prakerja mendaftarkan diri ke 1-2 pelatihan.
+                    .col-3.mb-3
+                        .stick-list.d-flex
+                            .stick-number 6
+                            div.px-2
+                                span Manajemen
 
-//-     .container-fluid.container-lg.position-relative
-//-             .container.py-5
-//-                 .row.pipe-line-6.justify-content-center
-//-                     .col-8
-//-                         .text-center 
-//-                             h4.mb-4 5 Topik Pelatihan Paling Diminati di Prakerja
-//-                         .d-flex.justify-content-between.w-100
-//-                             .d-flex.flex-column.text-center.gap-1
-//-                                 .mb-3
-//-                                     img(src="img/icon-1.svg", width="64", alt="")
-//-                                 h6 21%
-//-                                 p.text-secondary.fs-7 Penjualan dan Pemasaran
+                    .col-3.mb-3
+                        .stick-list.d-flex
+                            .stick-number 7
+                            div.px-2
+                                span Pertanian
+                        
+                        
 
-//-                             .d-flex.flex-column.text-center.gap-1
-//-                                 .mb-3
-//-                                     img(src="img/icon-2.svg", width="64", alt="")
-//-                                 h6 12%
-//-                                 p.text-secondary.fs-7 Makanan dan Minuman
-
-//-                             .d-flex.flex-column.text-center.gap-1
-//-                                 .mb-3 
-//-                                     img(src="img/icon-3.svg", width="64", alt="")
-//-                                 h6 11%
-//-                                 p.text-secondary.fs-7 Gaya Hidup
-
-//-                             .d-flex.flex-column.text-center.gap-1
-//-                                 .mb-3 
-//-                                     img(src="img/icon-4.svg", width="64", alt="")
-//-                                 h6 8%
-//-                                 p.text-secondary.fs-7 Manajemen
-
-//-                             .d-flex.flex-column.text-center.gap-1
-//-                                 .mb-3 
-//-                                     img(src="img/icon-5.svg", width="64", alt="")
-//-                                 h6 5%
-//-                                 p.text-secondary.fs-7 Teknik
+                p Sebagian besar responden menyelesaikan pelatihan makanan dan minuman sebagai pelatihan pertama mereka, dan hampir setengahnya saat ini sedang mempersiapkan bisnis.
