--- a/index.pug
+++ b/index.pug
@@ -22,6 +22,8 @@ html(lang="id" translate="no" page-class="home")
             include pug/home/section_rekening_insentif.pug
             include pug/home/section_pipeline_insentif.pug
 
+            //- include pug/includes/section_list_province.pug
+
 
         include pug/includes/footer.pug
     include pug/includes/html_foot.pug
