--- a/pug/home/section_pipeline_data.pug
+++ b/pug/home/section_pipeline_data.pug
@@ -2,7 +2,7 @@ section.section-course.py-3.py-lg-5
     .container.px-4.px-md-0
         //- Pipeline 1 
         .row
-            .col-6.p-3.bg-o600.rounded-bottom-left.pipeline
+            .col-lg-6.p-3.bg-o600.rounded-bottom-left.pipeline
                 .d-flex.align-items-center.justify-content-center.h-100
                     div.text-white.p-4
                         p
@@ -11,7 +11,7 @@ section.section-course.py-3.py-lg-5
                         p Sebanyak 85,9% responden berencana menggunakan sertifikat Prakerja apabila akan melamar pekerjaan di masa depan.
                         a.text-white(href="#") Sumber
 
-            .col-6.p-3.bg-pipeline.pipeline.rounded-top-right(style="background-image: url('img/img-bg-lp-1.webp');")
+            .col-lg-6.p-3.bg-pipeline.pipeline.rounded-top-right(style="background-image: url('img/img-bg-lp-1.webp');")
                 .d-flex.align-items-center.justify-content-center.h-100
                     div.text-center
                         h6.text-white Jumlah Lembaga Pelatihan
@@ -19,23 +19,23 @@ section.section-course.py-3.py-lg-5
 
         //- Pipeline 2 
         .row
-            .col-6.p-3.bg-pipeline.pipeline.rounded-top-left(style="background-image: url('img/img-bg-pelatihan.webp');")
+            .col-lg-6.p-3.bg-pipeline.pipeline.rounded-top-left(style="background-image: url('img/img-bg-pelatihan.webp');")
                 .d-flex.align-items-center.justify-content-center.h-100
                     div.text-center
                         h6.text-white Jumlah Pelatihan
                         h4.text-white.display-5 109,165
 
-            .col-6.text-center.py-5.bg-b800.pipeline.text-white.rounded-bottom-right.p-4
+            .col-lg-6.text-center.py-5.bg-b800.pipeline.text-white.rounded-bottom-right.p-4
                 h6.text-white Total Pendaftaran Pelatihan
                 h3.display-5.text-white 29,165,063
                 p.m-0 Dengan rata-rata 1 penerima Prakerja mendaftarkan diri ke 1-2 pelatihan.
 
         //- Pipeline 3
         .row.pipe-line-6.justify-content-center.py-lg-5.py-4.bg-s100.rounded-bottom-left.rounded-top-right
-            .col-10
+            .col-lg-10
                 .text-center 
                     h4.mb-4 5 Topik Pelatihan Paling Diminati di Prakerja
-                .d-flex.justify-content-between.w-100
+                .d-flex.flex-column.flex-lg-row.justify-content-between.w-100
                     .d-flex.flex-column.text-center.gap-1
                         .mb-3
                             img(src="img/icon-1.svg", width="64", alt="")
@@ -70,48 +70,48 @@ section.section-course.py-3.py-lg-5
         .row.pipe-line-6.justify-content-center.py-lg-5.py-4.bg-b800.rounded-bottom-right.rounded-top-left.text-white
             .col-10
                 p Sejalan dengan survey CIPG yang menyatakan bahwa 7 pilihan pelatihan yang paling diminati adalah :
-                .row
-                    .col-3.mb-3
+                .row.d-flex.flex-column.flex-lg-row
+                    .col-lg-3.mb-3
                         .stick-list.d-flex
-                            .stick-number 1
-                            div.px-2
+                            .stick-number.bg-b500 1
+                            .stick-item.px-2
                                 span Makanan dan minuman
                         
-                    .col-3.mb-3
+                    .col-lg-3.mb-3
                         .stick-list.d-flex
-                            .stick-number 2
-                            div.px-2
+                            .stick-number.bg-b500 2
+                            .stick-item.px-2
                                 span Penjualan dan pemasaran
                         
-                    .col-3.mb-3
+                    .col-lg-3.mb-3
                         .stick-list.d-flex
-                            .stick-number 3
-                            div.px-2
+                            .stick-number.bg-b500 3
+                            .stick-item.px-2
                                 span Keuangan
         
 
-                    .col-3.mb-3
+                    .col-lg-3.mb-3
                         .stick-list.d-flex
-                            .stick-number 4
-                            div.px-2
+                            .stick-number.bg-b500 4
+                            .stick-item.px-2
                                 span Gaya hidup
 
-                    .col-3.mb-3
+                    .col-lg-3.mb-3
                         .stick-list.d-flex
-                            .stick-number 5
-                            div.px-2
+                            .stick-number.bg-b500 5
+                            .stick-item.px-2
                                 span TI
 
-                    .col-3.mb-3
+                    .col-lg-3.mb-3
                         .stick-list.d-flex
-                            .stick-number 6
-                            div.px-2
+                            .stick-number.bg-b500 6
+                            .stick-item.px-2
                                 span Manajemen
 
-                    .col-3.mb-3
+                    .col-lg-3.mb-3
                         .stick-list.d-flex
-                            .stick-number 7
-                            div.px-2
+                            .stick-number.bg-b500 7
+                            .stick-item.px-2
                                 span Pertanian
                         
                         
