update click function on map

--- a/pug/home/section_persebaran_penerima.pug
+++ b/pug/home/section_persebaran_penerima.pug
@@ -9,7 +9,7 @@ section.section-course.py-3.py-lg-5
             .col-6.p-3.bg-o500.rounded-bottom-left.pipeline
                 .d-flex.align-items-center.justify-content-center.h-100
                     .text-center
-                        h3.display-5.text-white 18,887,737
+                        h3#total-penerima.display-5.text-white 00.000.000
                         p.m-0.text-white Total Penerima Program
 
             .col-6.p-3.bg-pipeline.pipeline.rounded-top-right(style="background-image: url('img/img-bg-alumni-1.webp');")
