--- a/index.pug
+++ b/index.pug
@@ -5,6 +5,7 @@
 - var contentDescription = {}
 - contentDescription.title = "Statistik Program Prakerja - prakerja.go.id"
 - contentDescription.description = "Informasi statistik penerima prakerja selama periode 2020 - 2024."
+- contentDescription.ogImage = "https://raw.githubusercontent.com/Kartu-Prakerja/laporan-penerima/main/img/img-cover-statistik-prakerja.jpg"
 
 doctype html
 html(lang="id" translate="no" page-class="home")
