--- a/provinsi/index.pug
+++ b/provinsi/index.pug
@@ -1,25 +1,21 @@
 //- INDEX LANDING PAGES
 //- start variable
-- var pageActive = 'tanyajawab'
+- var pageActive = ''
 - var baseURL = '../'
 - var contentDescription = {}
-- contentDescription.title = "Tanya Jawab Statistik Program Prakerja - prakerja.go.id"
+- contentDescription.title = "Provinsi ABC - prakerja.go.id"
 - contentDescription.description = "Informasi statistik penerima prakerja selama periode 2020 - 2024."
 - contentDescription.ogImage = "https://raw.githubusercontent.com/Kartu-Prakerja/laporan-penerima/main/img/img-cover-statistik-prakerja.jpg"
 
-//- doctype html
-<!DOCTYPE html>
-html(lang="id" page-class="faq")
+doctype html
+html(lang="id" translate="no" page-class="home")
     include ../pug/includes/html_head.pug
     body
         include ../pug/includes/analytics_no_script.pug
         include ../pug/includes/navigation.pug
         main
-           include ../pug/tanyajawab/section_tanya_jawab.pug
-           include ../pug/tanyajawab/section_course_category.pug
-           include ../pug/tanyajawab/section_terms.pug
-        
-        include ../pug/includes/modal.pug
-        include ../pug/includes/toast.pug
+
+            //- Content here
+
         include ../pug/includes/footer.pug
     include ../pug/includes/html_foot.pug
