--- a/pug/includes/html_head.pug
+++ b/pug/includes/html_head.pug
@@ -7,19 +7,19 @@ head
     meta(name="description" content=contentDescription.description)
     link(rel='canonical' href='https://statistik-penerima.prakerja.go.id')
     link(rel='alternate' hreflang='id' href='https://statistik-penerima.prakerja.go.id')
-    meta(property="og:image" content="https://raw.githubusercontent.com/Kartu-Prakerja/skill-week/main/img/statistik-penerima-by-prakerja-cover.jpg")
+    meta(property="og:image" content=contentDescription.ogImage)
     meta(property="og:image:width" content="400")
     meta(property="og:image:height" content="627")
     meta(property="og:locale" content="id_ID")
     meta(meta property="og:type" content="website")
     meta(property="og:description" content=contentDescription.description)
     meta(property="og:site_name" content="Prakerja")
-    meta(property="og:url" content="https://raw.githubusercontent.com/Kartu-Prakerja/skill-week/main/img/statistik-penerima-by-prakerja-cover.jpg")
-    meta(name="twitter:card" content="https://raw.githubusercontent.com/Kartu-Prakerja/skill-week/main/img/statistik-penerima-by-prakerja-cover.jpg")
+    meta(property="og:url" content=contentDescription.ogImage)
+    meta(name="twitter:card" content=contentDescription.ogImage)
     meta(name="twitter:site" content="")
     meta(name="twitter:title" content=contentDescription.title)
     meta(name="twitter:description" content=contentDescription.description)
-    meta(name="twitter:image" content="https://raw.githubusercontent.com/Kartu-Prakerja/skill-week/main/img/statistik-penerima-by-prakerja-cover.jpg")
+    meta(name="twitter:image" content=contentDescription.ogImage)
     meta(name="twitter:image:width" content="1200")
     meta(name="twitter:image:height" content="630")
     meta(http-equiv="X-UA-Compatible" content="IE=edge,chrome=1")
