--- a/provinsi/index.pug
+++ b/provinsi/index.pug
@@ -15,7 +15,16 @@ html(lang="id" translate="no" page-class="home")
         include ../pug/includes/navigation.pug
         main
 
-            //- Content here
+            include ../pug/provinsi/section_breadcrumbs.pug
+
+            .container.py-lg-5.py-4
+                //- sidebar nav
+                aside
+                    include ../pug/provinsi/section_sidebar.pug
+
+                //- main content
+                article
+                    include ../pug/provinsi/section_content_hero.pug
 
         include ../pug/includes/footer.pug
     include ../pug/includes/html_foot.pug
