update page detail province

--- a/css/scss/pds-penerima.scss
+++ b/css/scss/pds-penerima.scss
@@ -231,6 +231,14 @@ $pipeline-radius: 4rem;
   
 }
 
+.co-sidebar{
+
+}
+
+.co-content{
+  
+}
+
 /* Section Hero Start */
 .section-hero{
     position: relative;
