--- a/provinsi/index.pug
+++ b/provinsi/index.pug
@@ -16,15 +16,16 @@ html(lang="id" translate="no" page-class="home")
         main
 
             include ../pug/provinsi/section_breadcrumbs.pug
+            include ../pug/provinsi/section_main_content.pug
 
-            .container.py-lg-5.py-4
-                //- sidebar nav
-                aside
-                    include ../pug/provinsi/section_sidebar.pug
+            //- .container.py-lg-5.py-4
+            //-     //- sidebar nav
+            //-     aside.cody-sidebar.outline
+            //-         include ../pug/provinsi/section_sidebar.pug
 
-                //- main content
-                article
-                    include ../pug/provinsi/section_content_hero.pug
+            //-     //- main content
+            //-     article.cody-content.outline
+            //-         include ../pug/provinsi/section_content_hero.pug
 
         include ../pug/includes/footer.pug
     include ../pug/includes/html_foot.pug
