--- a/pug/provinsi/section_content_hero.pug
+++ b/pug/provinsi/section_content_hero.pug
@@ -1,1 +1,19 @@
-h1 Provinsi
+.row.bg-s100(style="min-height:320px") 
+    .col-lg-8 
+        p Map Canvas 
+
+    .col-lg-4.bg-s200.p-3
+        div
+            .h6 Provinsi
+            h1 Jambi 
+            .h6 Pulau Sumatera
+
+        hr
+
+        p 
+            i / fun fact /
+
+        div.h3 
+            | 17
+
+        p.fs-7 Provinsi Jambi berada di peringkat ke-17 penerima terbanyak Prakerja dari 38 provinsi selama periode 2020-2024 (per Juli 2024)
