--- a/pug/provinsi/section_main_content.pug
+++ b/pug/provinsi/section_main_content.pug
@@ -1,8 +1,8 @@
-section.py-lg-5.py-4 
+section.pt-3.pb-4 
     .container 
-        .row 
+        .row
             //- sidebar 
-            .col-lg-3
+            .col-lg-3.ps-0.pe-4
                 .list-group
                     a.list-group-item.list-group-item-action.active(href='#' aria-current='true')
                         | Semua Kabupaten / Kota
