--- a/pug/provinsi/section_profil_penerima.pug
+++ b/pug/provinsi/section_profil_penerima.pug
@@ -1,2 +1,184 @@
 section.py-lg-5.py-4
     h4 Profil Penerima Manfaat
+    p Data berasal dari tahun 2020-2024 dan Gelombang 1-69
+    
+    .row.mb-4
+        .col-12.p-2.bg-b100.rounded.mb-4
+            h6.m-0 Jenis Kelamin
+        .col-lg-6 
+            p e charts 
+
+        .col-lg-6
+            table.table.table-hover.fs-7
+                thead
+                    tr.table-active
+                        th Jenis Kelamin
+                        th Jumlah
+                        th Persentase
+                tbody.table-group-divider
+                    tr
+                        td Laki-laki
+                        td 2.101
+                        td 48,50%
+
+                    tr
+                        td Perempuan
+                        td 2.502
+                        td 51,50%
+
+    .row.mb-4
+        .col-12.p-2.bg-b100.rounded.mb-4
+            h6.m-0 Rentang Umur
+        .col-lg-6 
+            p e charts 
+
+        .col-lg-6
+            table.table.table-hover.fs-7
+                thead
+                    tr.table-active
+                        th Umur
+                        th Jumlah
+                        th Persentase
+                tbody.table-group-divider
+                    tr
+                        td 18-25
+                        td 402
+                        td 18.50%
+
+                    tr
+                        td 26-35
+                        td 1.204
+                        td 31,50%
+
+                    tr
+                        td 36-45
+                        td 1.204
+                        td 31,50%
+
+                    tr
+                        td 46-55
+                        td 1.204
+                        td 31,50%
+
+                    tr
+                        td 56-64
+                        td 1.204
+                        td 31,50%
+
+    .row.mb-4
+        .col-12.p-2.bg-b100.rounded.mb-4
+            h6.m-0 Pendidikan Terakhir
+        .col-lg-6 
+            p e charts 
+
+        .col-lg-6
+            table.table.table-hover.fs-7
+                thead
+                    tr.table-active
+                        th Pendidikan
+                        th Jumlah
+                        th Persentase
+                tbody.table-group-divider
+                    tr
+                        td SD
+                        td 402
+                        td 18.50%
+
+                    tr
+                        td SMP
+                        td 1.204
+                        td 31,50%
+
+                    tr
+                        td SMA/SMK
+                        td 1.204
+                        td 31,50%
+
+                    tr
+                        td Diploma
+                        td 1.204
+                        td 31,50%
+
+                    tr
+                        td S1
+                        td 1.204
+                        td 31,50%
+
+                    tr
+                        td S2
+                        td 1.204
+                        td 31,50%
+
+                    tr
+                        td S3
+                        td 1.204
+                        td 31,50%
+
+    .row.mb-4
+        .col-12.p-2.bg-b100.rounded.mb-4
+            h6.m-0 Status Pekerjaan
+        .col-lg-6 
+            p e charts 
+
+        .col-lg-6
+            table.table.table-hover.fs-7
+                thead
+                    tr.table-active
+                        th Status Pekerjaan
+                        th Jumlah
+                        th Persentase
+                tbody.table-group-divider
+                    tr
+                        td Bekerja
+                        td 402
+                        td 18.50%
+
+                    tr
+                        td Wirausaha
+                        td 1.204
+                        td 31,50%
+
+                    tr
+                        td Tidak Bekerja
+                        td 1.204
+                        td 31,50%
+
+                    tr
+                        td Pensiunan
+                        td 1.204
+                        td 31,50%
+
+    .row.mb-4
+        .col-12.p-2.bg-b100.rounded.mb-4
+            h6.m-0 Moda Pelatihan
+        .col-lg-6 
+            p e charts 
+
+        .col-lg-6
+            table.table.table-hover.fs-7
+                thead
+                    tr.table-active
+                        th Moda Pelatihan
+                        th Jumlah
+                        th Persentase
+                tbody.table-group-divider
+                    tr
+                        td Hybrid
+                        td 402
+                        td 18.50%
+
+                    tr
+                        td Self-paced Learning
+                        td 1.204
+                        td 31,50%
+
+                    tr
+                        td Webinar
+                        td 1.204
+                        td 31,50%
+
+                    tr
+                        td Luring
+                        td 1.204
+                        td 31,50%
+
