--- a/pug/provinsi/section_profil_penerima.pug
+++ b/pug/provinsi/section_profil_penerima.pug
@@ -6,7 +6,7 @@ section.py-lg-5.py-4
         .col-12.p-2.bg-b100.rounded.mb-4
             h6.m-0 Jenis Kelamin
         .col-lg-6 
-            p e charts 
+            span.skeleton-box.w-100.rounded(style="height:200px")
 
         .col-lg-6
             table.table.table-hover.fs-7
@@ -30,7 +30,7 @@ section.py-lg-5.py-4
         .col-12.p-2.bg-b100.rounded.mb-4
             h6.m-0 Rentang Umur
         .col-lg-6 
-            p e charts 
+            span.skeleton-box.w-100.rounded(style="height:200px")
 
         .col-lg-6
             table.table.table-hover.fs-7
@@ -69,7 +69,7 @@ section.py-lg-5.py-4
         .col-12.p-2.bg-b100.rounded.mb-4
             h6.m-0 Pendidikan Terakhir
         .col-lg-6 
-            p e charts 
+            span.skeleton-box.w-100.rounded(style="height:200px")
 
         .col-lg-6
             table.table.table-hover.fs-7
@@ -118,7 +118,7 @@ section.py-lg-5.py-4
         .col-12.p-2.bg-b100.rounded.mb-4
             h6.m-0 Status Pekerjaan
         .col-lg-6 
-            p e charts 
+            span.skeleton-box.w-100.rounded(style="height:200px")
 
         .col-lg-6
             table.table.table-hover.fs-7
@@ -152,7 +152,7 @@ section.py-lg-5.py-4
         .col-12.p-2.bg-b100.rounded.mb-4
             h6.m-0 Moda Pelatihan
         .col-lg-6 
-            p e charts 
+            span.skeleton-box.w-100.rounded(style="height:200px")
 
         .col-lg-6
             table.table.table-hover.fs-7
