--- a/pug/includes/navigation.pug
+++ b/pug/includes/navigation.pug
@@ -15,6 +15,12 @@ header.pdt-header
           a.nav-link(href=baseURL+'index.html' class={"nav-link-active" : pageActive === ''}) Beranda
         li.nav-item.md-hide
           a.nav-link(href=baseURL+'tanyajawab/index.html' class={"nav-link-active" : pageActive === 'tanyajawab'}) Tanya Jawab
+        li.nav-item.md-hide
+          .input-group.custom-search-2.search-only
+            button#button-addon1.btn.btn-outline-light(type='button')
+              i.bi.bi-search
+            input.form-control(type='text' aria-label='Sizing example input' aria-describedby='inputGroup-sizing-default' placeholder='Cari provinsi / kabupaten...')
+
   
 
               
