--- a/css/scss/scss-custom/_button.scss
+++ b/css/scss/scss-custom/_button.scss
@@ -44,6 +44,23 @@
     --bs-btn-color: var(--n400);
 }
 
+.btn-outline-light {
+    --bs-btn-color: #F1F3F5;
+    --bs-btn-border-color: #F1F3F5;
+    --bs-btn-hover-color: #000;
+    --bs-btn-hover-bg: #F1F3F5;
+    --bs-btn-hover-border-color: #F1F3F5;
+    --bs-btn-focus-shadow-rgb: 241, 243, 245;
+    --bs-btn-active-color: #000;
+    --bs-btn-active-bg: #F1F3F5;
+    --bs-btn-active-border-color: #F1F3F5;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #F1F3F5;
+    --bs-btn-disabled-bg: transparent;
+    --bs-btn-disabled-border-color: #F1F3F5;
+    --bs-gradient: none;
+  }
+
 .btn-outline-secondary,
 .btn-outline-success,
 .btn-outline-info{
