--- a/pug/home/section_profil_penerima.pug
+++ b/pug/home/section_profil_penerima.pug
@@ -1,13 +1,7 @@
-section.py-5
-    .container
-        h4.text-center.mb-4 Profil Penerima
+section.section-course.py-3.py-lg-5
+    .container.px-4.px-md-0
+        .row.text-center
+            h4 Profil Penerima
 
-        .row 
-            .col-lg-4 
-                span.skeleton-box.w-100.rounded(style="height:200px")
-
-            .col-lg-4 
-                div.skeleton-box.w-100.rounded(style="height:200px")
-
-            .col-lg-4 
-                div.skeleton-box.w-100.rounded(style="height:200px")
+            .col-lg-6 
+                
